Bug 479081 - without titlebar "configure Konsole" doesn't work.
Summary: without titlebar "configure Konsole" doesn't work.
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-27 14:17 UTC by GianPiero Puccioni
Modified: 2024-03-13 23:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GianPiero Puccioni 2023-12-27 14:17:33 UTC
SUMMARY
When "Remove window Titlebar and frame"  is checked the option "Configure Konsole"  (or the shortcut "CTRL+Shift+,") in the "settings" menu doesn't open the dialog and it cannot be reverted.



STEPS TO REPRODUCE
1. Check "Remove window Titlebar and frame" in "Configure Konsole"
2. Apply
3.  Try to open  "Configure Konsole" again

OBSERVED RESULT
Nothing

EXPECTED RESULT
"Configure Konsole" Dialog opening

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 39 
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
X11 Graphics
Comment 1 ninjalj 2024-02-26 00:16:22 UTC
Cannot reproduce. Are you sure the dialog has been closed/dismissed?
Comment 2 GianPiero Puccioni 2024-02-26 10:06:23 UTC
(In reply to ninjalj from comment #1)
> Cannot reproduce. Are you sure the dialog has been closed/dismissed?

I am not sure , it happened a couple of times but not anymore, and yes if I click on the Konsole win the dialog disappear and clicking on "configure" doesn't bring it in front so it appers as not working, maybe it should bring it in front....

Thanks for the attention.

G
Comment 3 Bug Janitor Service 2024-03-11 22:33:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/965
Comment 4 Kurt Hindenburg 2024-03-13 23:23:11 UTC
Git commit bf010aca7823e95d9f16e57922f4e9c7d6e82e72 by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 13/03/2024 at 22:45.
Pushed by hindenburg into branch 'master'.

Reshow configuration dialog after toggling borders

Usually, a QDialog with a parent stays on top of its parent.  However,
after hiding and showing the main window when toggling the
border-less/title-less option, this stops being true.

This can confuse users, if they apply this setting without closing the
configuration dialog, and the dialog gets behind the main window.
Afterwards, trying to open the configuration dialog doesn't work (it's
already open, but behind the window).

So, hide and show also the configuration dialog, which makes the dialog
stay on top of its parent again.

M  +25   -0    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/-/commit/bf010aca7823e95d9f16e57922f4e9c7d6e82e72